align bug image, space line items

--- a/css/styles.css
+++ b/css/styles.css
@@ -99,8 +99,9 @@ h1 {
 }
 
 .noBugs {
-    float: right;
-    display: block;
-    width: 10px;
-    height: auto;
+    padding: 100px;
+}
+
+ol {
+    padding-top: 60px;
 }
